# svea-rs

./: Cargo.toml  README.md
crates/svea/: Cargo.toml
crates/svea-client/: Cargo.toml
crates/svea-client/src/: lib.rs
crates/svea-cookies/: Cargo.toml
crates/svea-filter/: Cargo.toml
crates/svea-filter/src/: lib.rs
crates/svea-http/: Cargo.toml
crates/svea-http/src/: body.rs  lib.rs  method.rs  status.rs
crates/svea/src/: handler.rs  lib.rs  prelude.rs
crates/svea/src/router/: mod.rs
crates/webserver/: Cargo.toml
crates/webserver-client/: Cargo.toml
crates/webserver-client/src/: lib.rs
crates/webserver-filter/: Cargo.toml
crates/webserver-filter/src/: lib.rs  parsing.rs
crates/webserver-http/: Cargo.toml
crates/webserver-http/src/: lib.rs  query.rs
crates/webserver/src/: handler.rs  lib.rs
crates/webserver/src/interceptor/: builder.rs  mod.rs
crates/webserver/src/path/: builder.rs  mod.rs  queries.rs
crates/webserver/src/request/: mod.rs
crates/webserver/src/response/: builder.rs  mod.rs
crates/webserver/src/router/: builder.rs  mod.rs  route.rs
crates/webserver/src/router/route/: builder.rs  mod.rs
crates/webserver/src/server/: builder.rs  connection.rs  mod.rs  routing.rs
examples/example-app/: Cargo.toml
examples/example-app/src/: main.rs
examples/file-serving/: Cargo.toml
examples/readme-example/: Cargo.toml
examples/states/: Cargo.toml
examples/states/src/: main.rs
src/: main.rs
src/http/: method.rs  status.rs
src/request/: mod.rs
src/response/: builder.rs  mod.rs
src/server/: connection.rs  mod.rs
(+22 files in other folders)
