[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["webserver-http"]

[dependencies]
tokio = {version = "1.21.2", features = ["full"] }
webserver-http = { path = "../webserver-http" }