[package]
name = "states"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
svea = { path = "../../crates/svea" }
async-trait = "0.1.59"
sha2 = "0.10.6"
hex = "0.4.3"